# Tiara2

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/src/: 06_benchmark.py  benchmark_config.yaml
tiara/models/nnet-models-v1.1/: k-4_hidden_1-256_hidden_2-128_lr-0.001_dropout-0.2_epochs-45.pkl  k-5_hidden_1-256_hidden_2-128_lr-0.001_dropout-0.2_epochs-37.pkl
tiara/models/nnet-models-v1.2/: SHA256SUMS  first_k-6_hidden_1-128_hidden_2-64_lr-0.001_dropout-0.2_epochs-50.pkl  second_k-4_hidden_1-256_hidden_2-256_lr-0.001_dropout-0.5_epochs-50.pkl  second_k-5_hidden_1-256_hidden_2-128_lr-0.001_dropout-0.2_epochs-50.pkl  training_manifest.json
tiara/models/nnet-models-v1.3/: SHA256SUMS  first_k-4_hidden_1-256_hidden_2-256_lr-0.001_dropout-0.2_epochs-50.pkl  second_k-4_hidden_1-128_hidden_2-128_lr-0.001_dropout-0.2_epochs-50.pkl
tiara/models/nnet-models-v1.4/: SHA256SUMS  second_k-4_hidden_1-256_hidden_2-256_lr-0.001_dropout-0.2_epochs-50.pkl  second_k-5_hidden_1-256_hidden_2-128_lr-0.001_dropout-0.5_epochs-50.pkl  training_manifest.json
tiara/models/nnet-models-v2.0/: second_k-5_hidden_1-64_hidden_2-64_lr-0.001_dropout-0.2_epochs-50.pkl  training_manifest.json
tiara/models/tfidf-models-v1.3/: tfidf_manifest.json
tiara/models/tfidf-models-v1.4/: SHA256SUMS  tfidf_manifest.json
tiara/models/tfidf-models-v2.0/: SHA256SUMS
tiara/training/: hyperparameter_search_gpu.py  hyperparameter_search_second_stage.py  train_models_gpu.py  train_tfidf_optimized.py
tiara/training/legacy/: hyperparameter_search_first_stage.py
(+42 files in other folders)
